--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -35,8 +35,7 @@
     "DEF Table1 = STRUCT:<\n",
     "Leg, T:1:0.9:Leg, T:<1,2>:<0.9,0.9>:Leg, T:2:0.9:Leg,\n",
     "T:3:0.7:Plane >;\n",
-    "```\n",
-    "VRML: Table: ? out.wrl ? ;"
+    "```",
    ]
   },
   {
@@ -171,12 +170,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "DEF a = T:<1,2>:<-0.5,-0.5>:(CUBOID:<1,1,1>);\n",
     "DEF b = R:<1,2>:(PI/4):a;\n",
     "STRUCT:< a + b, T:1:2, a & b, T:1:2, a ∧ b, T:1:2, a - b >;"
+    "```"
    ]
   },
   {
@@ -227,9 +228,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "DEF Manhattan2D = MKPOL:< verts, cells, pols >\n",
     "WHERE\n",
     "    verts = < <0,0>,<3,0>,<5,0>,<7,0>,<8,0>,<9.5,1>,<10,1.5>,<0,3>,<3,3>,<5,3>,\n",
@@ -249,7 +251,8 @@
     "    <68,69,72,71>,<69,86,78,72>,<78,86,85,77>,<71,77,85,68>, <97,98,74,73>,\n",
     "    <99,100,76,75>,<79,80,88,87>,<81,82,90,89>, <91,92,94,93> >,\n",
     "    pols = AA:LIST:(1..29)\n",
-    "END;"
+    "END;",
+    "```"
    ]
   },
   {
