--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -176,7 +176,7 @@
     "```\n",
     "DEF a = T:<1,2>:<-0.5,-0.5>:(CUBOID:<1,1,1>);\n",
     "DEF b = R:<1,2>:(PI/4):a;\n",
-    "STRUCT:< a + b, T:1:2, a & b, T:1:2, a ∧ b, T:1:2, a - b >;"
+    "STRUCT:< a + b, T:1:2, a & b, T:1:2, a ∧ b, T:1:2, a - b >;",
     "```"
    ]
   },
