--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -324,9 +324,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "DEF MultExtrude (p::IsPol) (h::IsSeqOf:IsReal) =\n",
     "    STRUCT ∼ AA:* ∼ TRANS):< ThePolSeq, AA:Q:h >\n",
     "WHERE\n",
@@ -336,7 +337,8 @@
     "    MyCells = (AA:LIST ∼ S2 ∼ UKPOL):P\n",
     "END;\n",
     "DEF GrowingH = 1..29;\n",
-    "DEF ManhattanH = <1,3,1,11,1,0.2,1,0.1,1,8,15,1,1,1,1,8,1,15,8,1,2,2,2,2,5,9,1,1,1>;"
+    "DEF ManhattanH = <1,3,1,11,1,0.2,1,0.1,1,8,15,1,1,1,1,8,1,15,8,1,2,2,2,2,5,9,1,1,1>;",
+    "```\n"
    ]
   },
   {
