--- a/2017-10-23/workshop_01.ipynb
+++ b/2017-10-23/workshop_01.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Esercitazione \"Laboratorio di Programmazione Geometrica e Grafica\"</h1>\n",
-    "- In questo workshop sono stati convertiti da FL a PyPlasm alcuni degli script presenti nel capitolo 1 e 2 del libro"
+    "<h1>Esercitazione \"Laboratorio di Programmazione Geometrica e Grafica\"</h1>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Workshop_01 (23-10-17)</h2>"
+    "<h2>Workshop_01 (23-10-17)</h2>\n",
+    "- In questo workshop sono stati convertiti da FL a PyPlasm alcuni degli script presenti nel capitolo 1 e 2 del libro"
    ]
   },
   {
