--- a/2017-10-16/workshop_00.ipynb
+++ b/2017-10-16/workshop_00.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Workshop_00 (16-10-17)</h2>"
+    "<h2>Workshop_00 (16-10-17)</h2>\n",
+    "- In questo workshop sono stati fatti i primi esperimenti con PyPlasm e LarLiB utilizzando la documentazione disponibile\n",
+    "- Sono stati svolti i due esercizi assegnati dal professore"
    ]
   },
   {
