Modifiche al codice

--- a/2017-10-30/Workshop_02.ipynb
+++ b/2017-10-30/Workshop_02.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Esercitazione \"Laboratorio di Programmazione Geometrica e Grafica\"</h1>"
+    "# Esercitazione \"Laboratorio di Programmazione Geometrica e Grafica\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Workshop_02 (30-10-17)</h2>\n",
+    "## Workshop_02 (30-10-17)\n",
     "- In questo workshop sono stati realizzati diversi mobili presenti nel sito di IKEA\n",
     "- I mobili e gli altri oggetti definiti sono parametrizzati per altezza, larghezza, spessore, numero componenti ecc...\n",
     "- In conclusione è stata realizzata una stanza arredata con i vari mobili ed altri oggetti di design precedentemente definiti\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000CA22F90> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BAB58D0> >"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000CA4ADE0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BAB5900> >"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97DEA0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BAB5E40> >"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97DE40> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BAB5B40> >"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,13 +210,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- mobiletto(double lato, double spessore, int altezzaa)\n",
+    "- mobiletto(double lato, double spessore, int altezza)\n",
     "- crea un mobile miniaml composto da 3 shelf in larghezza e un numero di piani pari ad \"altezza\" (oggetto in figura)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97DA80> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BAB59F0> >"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,23 +269,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- mobile(double altezza, double larghezza)\n",
+    "- crea un mobile come quello in figura di altezza \"altezza\" e larghezza \"larghezza\"\n",
+    "- il mobile ha 5 scaffali di pari altezza"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyplasm import *\n",
-    "def cubo():\n",
-    "    return CUBOID([1.5,1,1])\n",
+    "def cubo(altezza, larghezza):\n",
+    "    return CUBOID([larghezza,1,altezza])\n",
     "\n",
     "def tile(x,y,z):\n",
     "    return PROD([PROD([QUOTE([x]),QUOTE([y])]),QUOTE([z])])\n",
     "\n",
-    "def shelf():\n",
-    "    return COLOR(RED)(STRUCT([tile(1,1,0.05),tile(1,0.05,1),tile(0.05,1,1),T(1)(0.95)(tile(0.05,1,1)),T(3)(0.95)(tile(1,1,0.05))]))\n",
+    "def shelf(a, altezza):\n",
+    "    return COLOR(RED)(STRUCT([tile(a,1,0.05),tile(a,0.05,a),tile(0.05,1,a),T(1)(a-0.05)(tile(0.05,1,a)),T(3)(a-0.05)(tile(a,1,0.05))]))\n",
     "\n",
-    "def shelfs():\n",
-    "    return STRUCT(NN(5)([shelf(),T(3)(1)]))\n",
+    "def shelfs(larghezza, altezza):\n",
+    "    return STRUCT(NN(5)([shelf(larghezza, altezza),T(3)(larghezza)]))\n",
     "\n",
     "def leg_mobile():\n",
     "    return COLOR(RED)(CUBOID([0.2,0.2,0.2]))\n",
@@ -293,28 +302,28 @@
     "def pomello():\n",
     "    return COLOR(RED)(SPHERE(0.05)([24,32]))\n",
     "\n",
-    "def mobile():\n",
-    "    return STRUCT([T(1)(1)(cubo()),S(3)(.2)(shelfs()),T(1)(-1.5)(cubo()),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile())])"
+    "def mobile(altezza, larghezza):\n",
+    "    return STRUCT([cubo(altezza, larghezza*0.4),S(3)(0.4*(altezza/(larghezza*0.4)))(T(1)(larghezza*0.4)(shelfs(larghezza*0.2, altezza/5))),T(1)(larghezza*0.6)(cubo(altezza, larghezza*0.4)),T([1,3])([larghezza-0.2,-0.2])(leg_mobile()),T([1,2,3])([larghezza-0.2,1-0.2,-0.2])(leg_mobile()), T([3])([-0.2])(leg_mobile()), T([2,3])([1-0.2,-0.2])(leg_mobile())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97D930> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C26D870> >"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(mobile())"
+    "VIEW(mobile(1.5,4))"
    ]
   },
   {
@@ -325,22 +334,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- mobile come il precedente al quale sono stati aggiunti dei pomelli equidistanti"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cubo():\n",
-    "    return CUBOID([1.5,1,1])\n",
+    "from pyplasm import *\n",
+    "def cubo(altezza, larghezza):\n",
+    "    return CUBOID([larghezza,1,altezza])\n",
     "\n",
     "def tile(x,y,z):\n",
     "    return PROD([PROD([QUOTE([x]),QUOTE([y])]),QUOTE([z])])\n",
     "\n",
-    "def shelf_mobile():\n",
-    "    return COLOR(RED)(STRUCT([tile(1,1,0.05),tile(1,0.05,1),tile(0.05,1,1),T(1)(0.95)(tile(0.05,1,1)),T(3)(0.95)(tile(1,1,0.05))]))\n",
+    "def shelf(a, altezza):\n",
+    "    return COLOR(RED)(STRUCT([tile(a,1,0.05),tile(a,0.05,a),tile(0.05,1,a),T(1)(a-0.05)(tile(0.05,1,a)),T(3)(a-0.05)(tile(a,1,0.05))]))\n",
     "\n",
-    "def shelfs_mobile():\n",
-    "    return STRUCT(NN(5)([shelf_mobile(),T(3)(1)]))\n",
+    "def shelfs(larghezza, altezza):\n",
+    "    return STRUCT(NN(5)([shelf(larghezza, altezza),T(3)(larghezza)]))\n",
     "\n",
     "def leg_mobile():\n",
     "    return COLOR(RED)(CUBOID([0.2,0.2,0.2]))\n",
@@ -348,13 +365,13 @@
     "def pomello():\n",
     "    return COLOR(RED)(SPHERE(0.05)([24,32]))\n",
     "\n",
-    "def mobile_con_pomelli():\n",
-    "    return STRUCT([T(1)(1)(cubo()),S(3)(.2)(shelfs_mobile()),T(1)(-1.5)(cubo()),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile()),T([1,2,3])([1.2,1,0.8])(pomello()),T([1,2,3])([-0.2,1,0.8])(pomello())])"
+    "def mobile_con_pomelli(altezza, larghezza):\n",
+    "    return STRUCT([cubo(altezza, larghezza*0.4),S(3)(0.4*(altezza/(larghezza*0.4)))(T(1)(larghezza*0.4)(shelfs(larghezza*0.2, altezza/5))),T(1)(larghezza*0.6)(cubo(altezza, larghezza*0.4)),T([1,3])([larghezza-0.2,-0.2])(leg_mobile()),T([1,2,3])([larghezza-0.2,1-0.2,-0.2])(leg_mobile()), T([3])([-0.2])(leg_mobile()), T([2,3])([1-0.2,-0.2])(leg_mobile()), T([1,2,3])([larghezza-larghezza*0.3-larghezza*0.4,1,altezza-altezza*0.3])(pomello()), T([1,2,3])([larghezza-larghezza*0.3,1,altezza-altezza*0.3])(pomello())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -368,16 +385,16 @@
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97D510> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BB6B990> >"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(mobile_con_pomelli())"
+    "VIEW(mobile_con_pomelli(1.5,4))"
    ]
   },
   {
@@ -391,19 +408,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Parete arredata con i mobili IKEA creati in precedenza</h2>"
+    "## Parete arredata con i mobili IKEA creati in precedenza"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Codice da eseguire per creare i vari oggetti che arredano la stanza</h4>"
+    "- Codice da eseguire per creare i vari oggetti che arredano la stanza\n",
+    "- Il codice è lo stesso utilizzato negli esempi precedenti, è stato riproposto qui solamente per una questione di comodità"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,17 +488,17 @@
     "    plane3=RIGHT([RIGHT([plane,plane]),plane])\n",
     "    return STRUCT([plane3,T(3)(b)(library)])\n",
     "\n",
-    "def cassetto(larghezza,altezza):\n",
+    "def cassetto(altezza, larghezza):\n",
     "    return CUBOID([larghezza,1,altezza])\n",
     "\n",
     "def tile(x,y,z):\n",
     "    return PROD([PROD([QUOTE([x]),QUOTE([y])]),QUOTE([z])])\n",
     "\n",
-    "def shelf_mobile():\n",
-    "    return COLOR(RED)(STRUCT([tile(1,1,0.05),tile(1,0.05,1),tile(0.05,1,1),T(1)(0.95)(tile(0.05,1,1)),T(3)(0.95)(tile(1,1,0.05))]))\n",
+    "def shelf_mobile(a, altezza):\n",
+    "    return COLOR(RED)(STRUCT([tile(a,1,0.05),tile(a,0.05,a),tile(0.05,1,a),T(1)(a-0.05)(tile(0.05,1,a)),T(3)(a-0.05)(tile(a,1,0.05))]))\n",
     "\n",
-    "def shelfs_mobile():\n",
-    "    return STRUCT(NN(10)([shelf_mobile(),T(3)(1)]))\n",
+    "def shelfs_mobile(larghezza, altezza):\n",
+    "    return STRUCT(NN(5)([shelf_mobile(larghezza, altezza),T(3)(larghezza)]))\n",
     "\n",
     "def leg_mobile():\n",
     "    return COLOR(RED)(CUBOID([0.2,0.2,0.2]))\n",
@@ -488,16 +506,23 @@
     "def pomello():\n",
     "    return COLOR(RED)(SPHERE(0.05)([24,32]))\n",
     "\n",
-    "def mobile_con_pomelli():\n",
-    "    return STRUCT([T(1)(1)(cassetto(1.5,2)),S(3)(.2)(shelfs_mobile()),T(1)(-1.5)(cassetto(1.5,2)),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile()),T([1,2,3])([1.2,1,0.8])(pomello()),T([1,2,3])([-0.2,1,0.8])(pomello())])\n",
+    "def mobile_con_pomelli(altezza, larghezza):\n",
+    "    return STRUCT([cassetto(altezza, larghezza*0.4),S(3)(0.4*(altezza/(larghezza*0.4)))(T(1)(larghezza*0.4)(shelfs_mobile(larghezza*0.2, altezza/5))),T(1)(larghezza*0.6)(cassetto(altezza, larghezza*0.4)),T([1,3])([larghezza-0.2,-0.2])(leg_mobile()),T([1,2,3])([larghezza-0.2,1-0.2,-0.2])(leg_mobile()), T([3])([-0.2])(leg_mobile()), T([2,3])([1-0.2,-0.2])(leg_mobile()), T([1,2,3])([larghezza-larghezza*0.3-larghezza*0.4,1,altezza-altezza*0.3])(pomello()), T([1,2,3])([larghezza-larghezza*0.3,1,altezza-altezza*0.3])(pomello())])\n",
     "\n",
-    "def mobile_grande():\n",
-    "    return TEXTURE('imm/texture/legno2.png')((STRUCT([T(1)(1)(cassetto(1.5,4)),shelfs_colonna(1,0.05,4),T(1)(-1.5)(cassetto(1.5,4)),T([1,3])([-1.5,-0.2])(leg_mobile()),T([1,3])([2.3,-0.2])(leg_mobile()),T([1,3,2])([-1.5,-0.2,0.8])(leg_mobile()),T([1,3,2])([2.3,-0.2,0.8])(leg_mobile())])))"
+    "def mobile_grande(altezza, larghezza):\n",
+    "    return TEXTURE('imm/texture/legno2.png')(STRUCT([cassetto(altezza, larghezza*0.4),S(3)(0.4*(altezza/(larghezza*0.4)))(T(1)(larghezza*0.4)(shelfs_mobile(larghezza*0.2, altezza/5))),T(1)(larghezza*0.6)(cassetto(altezza, larghezza*0.4)),T([1,3])([larghezza-0.2,-0.2])(leg_mobile()),T([1,2,3])([larghezza-0.2,1-0.2,-0.2])(leg_mobile()), T([3])([-0.2])(leg_mobile()), T([2,3])([1-0.2,-0.2])(leg_mobile()), T([1,2,3])([larghezza-larghezza*0.3-larghezza*0.4,1,altezza-altezza*0.3])(pomello()), T([1,2,3])([larghezza-larghezza*0.3,1,altezza-altezza*0.3])(pomello())]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Comando per visualizzare la parete con i mobili"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -511,16 +536,16 @@
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C9AAEA0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C020E40> >"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(STRUCT([gray_wall(6,12),T([2,3])([6,.1])(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T([2,3])([10,0.1])(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T([2,3])([2,0.3])(R([1,2])(PI/2)(mobile_con_pomelli()))]))"
+    "VIEW(STRUCT([gray_wall(6,12),T([2,3])([6,.1])(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T([2,3])([10,0.1])(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T([2,3])([0.5,0.3])(R([1,2])(PI/2)(mobile_con_pomelli(1.5,4)))]))"
    ]
   },
   {
@@ -552,8 +577,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Comando per visualizzare la stanza arredata"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -561,26 +593,27 @@
      "output_type": "stream",
      "text": [
       "Child 3\n",
+      "Child 3\n",
+      "Child 3\n",
       "Child 3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C97F030> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000C020FC0> >"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "VIEW(STRUCT([wall(6,12), R([1,2])(PI/2)(wall(6,12)), T([1,2,3])([-2,0.1,1])(R([1,2])(PI/2)(poster(4,4))), R([1,3])(PI/2)(floor(12,12)), T([1,2,3])([-4,3,0.05])(R([1,3])(PI/2)(tappeto(4,6))),T([1,2,3])([-5,4,1.71])(R([1,3])(PI)(table(2,4,0.2))), T([1,2,3])([-7.5,4.5,0.2])(chair()),T([1,2,3])([-7.5,6.5,0.2])(chair()),T([1,2,3])([-4.5,5.5,0.2])(R([1,2])(PI)(chair())),T([1,2,3])([-4.5,7.5,0.2])(R([1,2])(PI)(chair())),T([2,3])([6,.1])(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T([2,3])([10,0.1])(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T([2,3])([2,0.3])(R([1,2])(PI/2)(mobile_con_pomelli())), T([1,2,3])([-10,0.1,0.3])(mobile_grande())]))"
+    "VIEW(STRUCT([wall(6,12), R([1,2])(PI/2)(wall(6,12)), T([1,2,3])([-2,0.1,1])(R([1,2])(PI/2)(poster(4,4))), R([1,3])(PI/2)(floor(12,12)), T([1,2,3])([-4,3,0.05])(R([1,3])(PI/2)(tappeto(4,6))),T([1,2,3])([-5,4,1.71])(R([1,3])(PI)(table(2,4,0.2))), T([1,2,3])([-7.5,4.5,0.2])(chair()),T([1,2,3])([-7.5,6.5,0.2])(chair()),T([1,2,3])([-4.5,5.5,0.2])(R([1,2])(PI)(chair())),T([1,2,3])([-4.5,7.5,0.2])(R([1,2])(PI)(chair())),T([2,3])([6,.1])(R([1,2])(PI/2)(mobiletto(1,0.01,5))), T([2,3])([10,0.1])(R([1,2])(PI/2)(scaffali(1.1,1.1,0.03,8))), T([2,3])([1,4])(R([1,2])(PI/2)(shelfs_comp())), T([2,3])([1,0.3])(R([1,2])(PI/2)(mobile_con_pomelli(1.5,4))), T([1,2,3])([-11,0.1,0.3])(mobile_grande(5,4))]))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -588,7 +621,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -596,7 +628,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -604,7 +635,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
