--- a/2017-11-06/Workshop_03.ipynb
+++ b/2017-11-06/Workshop_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +190,14 @@
     "    larghezza_torre_2=4\n",
     "    fattore_altezza_2=0.9\n",
     "\n",
-    "    obj3=torre(larghezza_torre_2,altezza_torre_2,numero_faccie_torre,sfericita_cupola,fattore_altezza_2)\n",
+    "    obj3=torre(larghezza_torre_2,altezza_torre_2,numero_facce_torre,sfericita_cupola,fattore_altezza_2)\n",
     "\n",
     "    # parametri della torre piccola del secondo piano\n",
     "    altezza_torre_3=3\n",
     "    larghezza_torre_3=4\n",
     "    fattore_altezza_3=1.5\n",
     "\n",
-    "    obj4=torre(larghezza_torre_3,altezza_torre_3,numero_faccie_torre,sfericita_cupola,fattore_altezza_3)\n",
+    "    obj4=torre(larghezza_torre_3,altezza_torre_3,numero_facce_torre,sfericita_cupola,fattore_altezza_3)\n",
     "    obj4 = STRUCT([TOP([obj4,puntale_cupola])])\n",
     "\n",
     "    # parametri della cupola grande centrale\n",
@@ -205,7 +205,7 @@
     "    larghezza_torre_5=8\n",
     "    fattore_altezza_5=1\n",
     "\n",
-    "    obj5=torre(larghezza_torre_5,altezza_torre_5,numero_faccie_torre,sfericita_cupola,fattore_altezza_5)\n",
+    "    obj5=torre(larghezza_torre_5,altezza_torre_5,numero_facce_torre,sfericita_cupola,fattore_altezza_5)\n",
     "\n",
     "    #parametri della struttura centrale grande\n",
     "    larghezza_edificio_centrale=35\n",
@@ -780,103 +780,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Child 3\n",
-      "Child 3\n",
-      "Child 3\n",
-      "Child 3\n",
-      "Child 3\n",
-      "Child 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "#parametri del puntale\n",
-    "altezza_puntale=1.5\n",
-    "larghezza_puntale=0.5\n",
-    "\n",
-    "puntale_cupola = puntale(altezza_puntale,larghezza_puntale)\n",
-    "\n",
-    "#parametri de puntale grande\n",
-    "altezza_puntale_grande=5\n",
-    "larghezza_puntale_grande=1.5\n",
-    "\n",
-    "puntale_cupola_grande = puntale(altezza_puntale_grande,larghezza_puntale_grande)\n",
-    "\n",
-    "# parametri delle torri piccole della costruzione laterale espresse in metri\n",
-    "altezza_torre=8\n",
-    "larghezza_torre=3\n",
-    "numero_facce_torre=8\n",
-    "sfericita_cupola=30\n",
-    "fattore_altezza=1\n",
-    "\n",
-    "obj=torre(larghezza_torre,altezza_torre,numero_facce_torre,sfericita_cupola,fattore_altezza)\n",
-    "\n",
-    "# parametri dell'edificio centrale della costruzione laterale espresso in metri\n",
-    "larghezza_edificio=10\n",
-    "altezza_edificio=13\n",
-    "\n",
-    "obj2=edificio(larghezza_edificio, altezza_edificio)\n",
-    "\n",
-    "# parametri della torre centrale della cotruzione laterale\n",
-    "altezza_torre_2=3\n",
-    "larghezza_torre_2=4\n",
-    "fattore_altezza_2=0.9\n",
-    "\n",
-    "obj3=torre(larghezza_torre_2,altezza_torre_2,numero_faccie_torre,sfericita_cupola,fattore_altezza_2)\n",
-    "\n",
-    "# parametri della torre piccola del secondo piano\n",
-    "altezza_torre_3=3\n",
-    "larghezza_torre_3=4\n",
-    "fattore_altezza_3=1.5\n",
-    "\n",
-    "obj4=torre(larghezza_torre_3,altezza_torre_3,numero_faccie_torre,sfericita_cupola,fattore_altezza_3)\n",
-    "obj4 = STRUCT([TOP([obj4,puntale_cupola])])\n",
-    "\n",
-    "# parametri della cupola grande centrale\n",
-    "altezza_torre_5=8\n",
-    "larghezza_torre_5=8\n",
-    "fattore_altezza_5=1\n",
-    "\n",
-    "obj5=torre(larghezza_torre_5,altezza_torre_5,numero_faccie_torre,sfericita_cupola,fattore_altezza_5)\n",
-    "\n",
-    "#parametri della struttura centrale grande\n",
-    "larghezza_edificio_centrale=35\n",
-    "altezza_edificio_centrale=16\n",
-    "edificio_centrale = edificio(larghezza_edificio_centrale, altezza_edificio_centrale)\n",
-    "\n",
-    "\n",
-    "#comando per generare la struttura laterale\n",
-    "struttura_centrale_con_cupola = STRUCT([TOP([obj2,TOP([obj3,puntale_cupola])])])\n",
-    "\n",
-    "struttura_piccola = STRUCT([struttura_centrale_con_cupola,\n",
-    "                            T([1,2])([0,larghezza_edificio/2])(obj),\n",
-    "                            T([1,2])([larghezza_edificio/2,0])(obj),\n",
-    "                            T([1,2])([larghezza_edificio,larghezza_edificio/2])(obj),\n",
-    "                            T([1,2])([larghezza_edificio/2,larghezza_edificio])(obj)\n",
-    "                            ])\n",
-    "\n",
-    "struttura_centrale_grande_con_cupola = STRUCT([TOP([edificio_centrale,TOP([obj5,puntale_cupola_grande])])])\n",
-    "\n",
-    "edificio_completo=STRUCT([T([1,2,3])([-larghezza_torre_3*1.5+larghezza_edificio_centrale,-larghezza_torre_3*1.5+larghezza_edificio_centrale,altezza_edificio_centrale])(obj4),\n",
-    "                          T([1,2,3])([-larghezza_torre_3*1.5+larghezza_edificio_centrale,larghezza_torre_3*1.5,altezza_edificio_centrale])(obj4),\n",
-    "                          T([1,2,3])([larghezza_torre_3*1.5,-larghezza_torre_3*1.5+larghezza_edificio_centrale,altezza_edificio_centrale])(obj4),\n",
-    "                          T([1,2,3])([larghezza_torre_3*1.5,larghezza_torre_3*1.5,altezza_edificio_centrale])(obj4),\n",
-    "                          T([1,2])([larghezza_edificio_centrale/2-larghezza_edificio/2,-(larghezza_edificio/2)])(struttura_piccola),\n",
-    "                          T([1,2])([-larghezza_edificio/2,larghezza_edificio_centrale/2-larghezza_edificio/2])(struttura_piccola),\n",
-    "                          T([1,2])([larghezza_edificio_centrale/2-larghezza_edificio/2,larghezza_edificio_centrale-larghezza_edificio/2])(struttura_piccola),\n",
-    "                          T([1,2])([larghezza_edificio_centrale-larghezza_edificio/2,larghezza_edificio_centrale/2-larghezza_edificio/2])(struttura_piccola),\n",
-    "                          struttura_centrale_grande_con_cupola])\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -885,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -903,10 +806,10 @@
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x00000000046A3F90> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000BA471E0> >"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +906,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1011,7 +913,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1051,7 +952,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1059,7 +959,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1099,7 +998,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1107,7 +1005,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1147,7 +1044,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1155,7 +1051,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
