--- a/2017-11-27/Workshop_6.ipynb
+++ b/2017-11-27/Workshop_6.ipynb
@@ -18,8 +18,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Versione con complessità computazione O(N^2)\n",
+    "- ATTENZIONE: questa versione non è efficiente"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +35,7 @@
     "import math\n",
     "import csv\n",
     "\n",
-    "def linee2grafo (percorso):\n",
+    "def linee2grafo_NO (percorso):\n",
     "    with open(percorso, \"rb\") as file:\n",
     "        reader = csv.reader(file, delimiter=\",\")\n",
     "        vertici = {}\n",
@@ -52,8 +60,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Versione con complessità computazionale O(N*logN)\n",
+    "- VERSIONE EFFICIENTE"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyplasm import *\n",
+    "import math\n",
+    "import csv\n",
+    "\n",
+    "def linee2grafo (percorso):\n",
+    "    with open(percorso, \"rb\") as file:\n",
+    "        reader = csv.reader(file, delimiter=\",\")\n",
+    "        vertici = {}\n",
+    "        archi = []\n",
+    "        numero_vertice = 0 # valore associato ad un vertice\n",
+    "        for row in reader:\n",
+    "            row_x1 = math.floor(float(row[0])*10)/10\n",
+    "            row_y1 = math.floor(float(row[1])*10)/10\n",
+    "            row_x2 = math.floor(float(row[2])*10)/10\n",
+    "            row_y2 = math.floor(float(row[3])*10)/10\n",
+    "            if not(vertici.has_key((row_x1,row_y1))):\n",
+    "                numero_vertice = numero_vertice + 1\n",
+    "                vertici[(row_x1,row_y1)] = numero_vertice\n",
+    "            if not(vertici.has_key((row_x2,row_y2))):\n",
+    "                numero_vertice = numero_vertice + 1\n",
+    "                vertici[(row_x2,row_y2)] = numero_vertice\n",
+    "\n",
+    "            archi.append([vertici[(row_x1,row_y1)], vertici[(row_x2,row_y2)]])\n",
+    "    print \"Operazione completata\"\n",
+    "    return [vertici,archi]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -100,16 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: [1.0, 1.0], 2: [2.0, 2.0], 3: [3.0, 3.0], 4: [4.0, 4.0]}"
+       "{(1.0, 1.0): 1, (2.0, 2.0): 2, (3.0, 3.0): 3, (4.0, 4.0): 4}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +186,7 @@
        "[[1, 2], [2, 3], [3, 1], [1, 4]]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -184,79 +233,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: [18.1, 69.0],\n",
-       " 2: [18.2, 204.0],\n",
-       " 3: [195.0, 204.0],\n",
-       " 4: [195.0, 69.1],\n",
-       " 5: [56.5, 158.2],\n",
-       " 6: [56.6, 110.5],\n",
-       " 7: [24.0, 110.6],\n",
-       " 8: [24.1, 158.2],\n",
-       " 9: [24.0, 162.6],\n",
-       " 10: [23.8, 198.2],\n",
-       " 11: [84.0, 198.3],\n",
-       " 12: [84.1, 162.7],\n",
-       " 13: [130.4, 198.3],\n",
-       " 14: [130.2, 161.5],\n",
-       " 15: [189.7, 161.5],\n",
-       " 16: [190.1, 198.1],\n",
-       " 17: [157.2, 157.7],\n",
-       " 18: [157.2, 110.6],\n",
-       " 19: [189.8, 110.8],\n",
-       " 20: [189.7, 157.7],\n",
-       " 21: [157.6, 74.1],\n",
-       " 22: [157.6, 105.9],\n",
-       " 23: [189.9, 106.1],\n",
-       " 24: [190.0, 73.9],\n",
-       " 25: [77.3, 156.7],\n",
-       " 26: [77.4, 120.6],\n",
-       " 27: [89.3, 120.4],\n",
-       " 28: [89.5, 111.9],\n",
-       " 29: [125.4, 111.7],\n",
-       " 30: [125.2, 120.7],\n",
-       " 31: [136.0, 120.9],\n",
-       " 32: [136.0, 156.9],\n",
-       " 33: [23.8, 106.6],\n",
-       " 34: [23.8, 73.9],\n",
-       " 35: [56.2, 74.1],\n",
-       " 36: [56.3, 106.8],\n",
-       " 37: [99.9, 112.0],\n",
-       " 38: [99.9, 106.1],\n",
-       " 39: [74.4, 105.9],\n",
-       " 40: [114.2, 111.8],\n",
-       " 41: [114.2, 106.1],\n",
-       " 42: [139.2, 106.3],\n",
-       " 43: [74.1, 69.2],\n",
-       " 44: [74.2, 76.3],\n",
-       " 45: [69.5, 76.4],\n",
-       " 46: [69.5, 78.7],\n",
-       " 47: [139.8, 69.2],\n",
-       " 48: [139.8, 76.4],\n",
-       " 49: [144.0, 76.4],\n",
-       " 50: [144.0, 78.7],\n",
-       " 51: [69.7, 105.1],\n",
-       " 52: [69.7, 103.0],\n",
-       " 53: [143.8, 105.1],\n",
-       " 54: [143.8, 103.2],\n",
-       " 55: [61.5, 84.3],\n",
-       " 56: [60.0, 93.9],\n",
-       " 57: [66.2, 101.5],\n",
-       " 58: [151.8, 97.7],\n",
-       " 59: [153.5, 88.1],\n",
-       " 60: [147.6, 80.4],\n",
-       " 61: [90.4, 156.9],\n",
-       " 62: [90.4, 198.0],\n",
-       " 63: [124.4, 198.3],\n",
-       " 64: [124.1, 156.7]}"
+       "{(18.1, 69.0): 1,\n",
+       " (18.2, 204.0): 2,\n",
+       " (23.8, 73.9): 34,\n",
+       " (23.8, 106.6): 33,\n",
+       " (23.8, 198.2): 10,\n",
+       " (24.0, 110.6): 7,\n",
+       " (24.0, 162.6): 9,\n",
+       " (24.1, 158.2): 8,\n",
+       " (56.2, 74.1): 35,\n",
+       " (56.3, 106.8): 36,\n",
+       " (56.5, 158.2): 5,\n",
+       " (56.6, 110.5): 6,\n",
+       " (60.0, 93.9): 56,\n",
+       " (61.5, 84.3): 55,\n",
+       " (66.2, 101.5): 57,\n",
+       " (69.5, 76.4): 45,\n",
+       " (69.5, 78.7): 46,\n",
+       " (69.7, 103.0): 52,\n",
+       " (69.7, 105.1): 51,\n",
+       " (74.1, 69.2): 43,\n",
+       " (74.2, 76.3): 44,\n",
+       " (74.4, 105.9): 39,\n",
+       " (77.3, 156.7): 25,\n",
+       " (77.4, 120.6): 26,\n",
+       " (84.0, 198.3): 11,\n",
+       " (84.1, 162.7): 12,\n",
+       " (89.3, 120.4): 27,\n",
+       " (89.5, 111.9): 28,\n",
+       " (90.4, 156.9): 61,\n",
+       " (90.4, 198.0): 62,\n",
+       " (99.9, 106.1): 38,\n",
+       " (99.9, 112.0): 37,\n",
+       " (114.2, 106.1): 41,\n",
+       " (114.2, 111.8): 40,\n",
+       " (124.1, 156.7): 64,\n",
+       " (124.4, 198.3): 63,\n",
+       " (125.2, 120.7): 30,\n",
+       " (125.4, 111.7): 29,\n",
+       " (130.2, 161.5): 14,\n",
+       " (130.4, 198.3): 13,\n",
+       " (136.0, 120.9): 31,\n",
+       " (136.0, 156.9): 32,\n",
+       " (139.2, 106.3): 42,\n",
+       " (139.8, 69.2): 47,\n",
+       " (139.8, 76.4): 48,\n",
+       " (143.8, 103.2): 54,\n",
+       " (143.8, 105.1): 53,\n",
+       " (144.0, 76.4): 49,\n",
+       " (144.0, 78.7): 50,\n",
+       " (147.6, 80.4): 60,\n",
+       " (151.8, 97.7): 58,\n",
+       " (153.5, 88.1): 59,\n",
+       " (157.2, 110.6): 18,\n",
+       " (157.2, 157.7): 17,\n",
+       " (157.6, 74.1): 21,\n",
+       " (157.6, 105.9): 22,\n",
+       " (189.7, 157.7): 20,\n",
+       " (189.7, 161.5): 15,\n",
+       " (189.8, 110.8): 19,\n",
+       " (189.9, 106.1): 23,\n",
+       " (190.0, 73.9): 24,\n",
+       " (190.1, 198.1): 16,\n",
+       " (195.0, 69.1): 4,\n",
+       " (195.0, 204.0): 3}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +392,7 @@
        " [63, 64]]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,17 +409,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Versione per visualizzare il grafo ottenuto con la versione del metodo con complessità O(N^2)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operazione completata\n"
+     ]
+    }
+   ],
+   "source": [
+    "percorso_file_no = \"svg/planimetria.lines\"\n",
+    "\n",
+    "a_no = linee2grafo_NO (percorso_file_no)\n",
+    "\n",
+    "vertici_no = a_no[0]\n",
+    "archi_no = a_no[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000AD381E0> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000DB3C180> >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyplasm import *\n",
+    "import math\n",
+    "import csv\n",
+    "muri = []\n",
+    "cont = 0\n",
+    "for cont in range(0,len(archi_no)):\n",
+    "    row_x1 = vertici_no[archi_no[cont][0]][0]\n",
+    "    row_y1 = vertici_no[archi_no[cont][0]][1]\n",
+    "    row_x2 = vertici_no[archi_no[cont][1]][0]\n",
+    "    row_y2 = vertici_no[archi_no[cont][1]][1]\n",
+    "    muri.append(POLYLINE([[row_x1, row_y1], [row_x2, row_y2]]))\n",
+    "\n",
+    "VIEW(STRUCT(muri))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Versione per visualizzare il grafo ottenuto con la versione del metodo con complessità O(N*logN)\n",
+    "- il risultato ottenuto è il medesimo, ma l'implementazione è più efficiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000DB3C210> >"
+      ]
+     },
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,17 +500,16 @@
     "muri = []\n",
     "cont = 0\n",
     "for cont in range(0,len(archi_1)):\n",
-    "    row_x1 = vertici_1[archi_1[cont][0]][0]\n",
-    "    row_y1 = vertici_1[archi_1[cont][0]][1]\n",
-    "    row_x2 = vertici_1[archi_1[cont][1]][0]\n",
-    "    row_y2 = vertici_1[archi_1[cont][1]][1]\n",
+    "    row_x1 = vertici_1.keys()[vertici_1.values().index(archi_1[cont][0])][0]\n",
+    "    row_y1 = vertici_1.keys()[vertici_1.values().index(archi_1[cont][0])][1]\n",
+    "    row_x2 = vertici_1.keys()[vertici_1.values().index(archi_1[cont][1])][0]\n",
+    "    row_y2 = vertici_1.keys()[vertici_1.values().index(archi_1[cont][1])][1]\n",
     "    muri.append(POLYLINE([[row_x1, row_y1], [row_x2, row_y2]]))\n",
     "\n",
     "VIEW(STRUCT(muri))"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -408,16 +525,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000A9A0600> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000DB3CA50> >"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +545,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -436,7 +552,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,7 +559,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
