--- a/2017-11-27/Workshop_6.ipynb
+++ b/2017-11-27/Workshop_6.ipynb
@@ -143,8 +143,8 @@
    "metadata": {},
    "source": [
     "#### Questi sono i vertici restituiti dal metodo sotto forma di dizionario\n",
-    "- chiave = valore del vertice (da contatore che parte da 0)\n",
-    "- valore = coordinate (x,y) del punto"
+    "- chiave = coordinate (x,y) del punto\n",
+    "- valore = valore del vertice (da contatore che parte da 0)"
    ]
   },
   {
