--- a/2017-11-13/Workshop_4.ipynb
+++ b/2017-11-13/Workshop_4.ipynb
@@ -160,6 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n"
     "DEF columna (dm, h , h base : : isReal) = base TOP\n",
     "torus bot TOP cylndr TOP torus top TOP capital\n",
     "TOP base top\n",
@@ -170,7 +171,8 @@
     "base = (T:<1,2>:<7 * dm/-12 , 7 * dm/-12> ∼ CUBOID):<7 * dm/6 , 7 * dm/6 , h base >,\n",
     "base top = (T:<1,2>:<7 * dm/-12 , 7 * dm/-12> ∼ CUBOID):<7 * dm/6 , 7 * dm/6 , dm/6>,\n",
     "capital = (JOIN ∼ TRUNCONE:< 0.8 * dm/2 , 1.2 * dm/2 , h/8>):4 + (R:<1,2>:(PI/4) ∼ JOIN ∼ TRUNCONE:< 0.8 * dm/2 ,1.2 * dm/2 ,h/8>):4\n",
-    "END;"
+    "END;\n"
+    "```"
    ]
   },
   {
