Modifiche al codice
Utilizzo della funzione COMP

--- a/2017-12-04/Workshop_07.ipynb
+++ b/2017-12-04/Workshop_07.ipynb
@@ -66,11 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Misure di riferimento--(cubito = 0.462 m)\n",
     "\n",
     "\n",
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -146,35 +145,35 @@
     "# Scala esterna\n",
     "\n",
     "def vdom(h):\n",
-    "    return PROD([EMBED(1)(INTERVALS(PI*3.0/24.0)(3)), QUOTE([h])])\n",
+    "    return PROD([COMP([EMBED(1),INTERVALS(PI*3/24)])(3),QUOTE([h])])\n",
     "\n",
     "def hdom(w):\n",
-    "    return (S(2)(-1)(PROD([EMBED(1)(INTERVALS(PI*3.0/24.0)(3)), QUOTE([w])])))\n",
+    "    return COMP([S(2)(-1), EMBED(1)])(PROD([INTERVALS(PI*3/24)(3), QUOTE([w])]))\n",
     "\n",
     "def steps(w,h,n):\n",
-    "    return STRUCT(CAT(N(n)([vdom(h),T(3)(h),hdom(w),T(2)(-w)])))\n",
+    "     return COMP([STRUCT, CAT, N(n)])([vdom(h), T(3)(h), hdom(w), T(2)(-w)])\n",
     "\n",
     "hbasament = hstep * nsteps\n",
     "\n",
-    "stair = RIGHT([MKPOL(UKPOL(steps(wstep, hstep, nsteps))),S(2)(-1)(SKEL_2(CUBOID([PI/24,wsteps,hbasament])))])\n",
+    "stair = RIGHT([COMP([MKPOL, UKPOL])(steps(wstep, hstep,nsteps)),COMP([S(2)(-1), SKEL_2, CUBOID])([PI/24, wsteps, hbasament])])\n",
     "\n",
-    "ramp = cylMap()(T(2)(r4)(stair))\n",
+    "ramp = cylMap(T(2)(r4)(stair))\n",
     "\n",
-    "stairs = STRUCT(NN(12)([ramp, R([1,2])(PI/6)]))"
+    "stairs = STRUCT(NN(12)([ramp, R([1, 2])(PI/6)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000E1FD330> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000DCA8060> >"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2017-12-04_152958.png](imm/2017-12-04_152958.png)"
+    "![2017-12-06_123607.png](imm/2017-12-06_123607.png)"
    ]
   },
   {
@@ -196,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![2017-12-04_153034.png](imm/2017-12-04_153034.png)"
+    "![2017-12-06_123652.png](imm/2017-12-06_123652.png)"
    ]
   },
   {
@@ -215,37 +214,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Basamento\n",
-    "\n",
-    "basisSector = cylMap()(PROD([EMBED(1)(INTERVALS(2*PI/12)(4)), INTERVALS(r4 - (wstep*(nsteps - 1)))(1)]))\n",
-    "\n",
-    "basis = STRUCT(NN(12)([basisSector,R([1,2])(2*PI/12)]))\n",
-    "\n",
-    "basement = R([1,2])(PI/-48)(STRUCT([stairs, T(3)(hstep*nsteps),basis]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000E2A7060> >"
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000DCA8750> >"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Basamento\n",
+    "\n",
+    "basisSector = COMP([cylMap, EMBED(1)])(PROD([INTERVALS(2*PI/12)(4),INTERVALS(r4-(wstep*(nsteps-1)))(1)]))\n",
+    "\n",
+    "basis = COMP([STRUCT, NN(12)])([basisSector, R([1,2])(2*PI/12)])\n",
+    "\n",
+    "basement = COMP([R([1,2])(PI/-48),STRUCT])([stairs, T(3)(hstep*nsteps),basis])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyplasm.xgepy.Hpc; proxy of <Swig Object of type 'std::shared_ptr< Hpc > *' at 0x000000000DCA8750> >"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "VIEW(basement)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2017-12-06_123807.png](imm/2017-12-06_123807.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![2017-12-06_123828.png](imm/2017-12-06_123828.png)"
    ]
   },
   {
