--- a/2017-12-04/Workshop_07.ipynb
+++ b/2017-12-04/Workshop_07.ipynb
@@ -36,7 +36,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": 
-   "```\n",
     "%*************************************************************%\n",
     "%---Misure di riferimento--(cubito = 0.462 m)-----------------%\n",
     "%*************************************************************%\n",
@@ -52,7 +51,7 @@
     "DEF wstep = wsteps/nsteps; %---cubiti; larghezza pedata-------%\n",
     "DEF hstep = 1/3; %---cubiti; altezza alzata-------------------%\n",
     "DEF hw4 = 29; %--cubiti; altezza all'imposta del muro esterno-%\n",
-    "DEF hbasament = hstep*nsteps;```"
+    "DEF hbasament = hstep*nsteps;"
    ]
   },
   {
